--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -44,7 +44,12 @@ training:
   checkpoint:
     resume_from_checkpoint: 0 # integer representing which checkpoint to load from, or <= 0 to not
     every_n_steps: null
-
+    
+hub:
+  push_to_hub: false
+  model_id: null
+  token: null
+  
 tracking:
   enabled: false
   report_to: "all"
