--- a/dsNVMEconfig.json
+++ b/dsNVMEconfig.json
@@ -43,7 +43,7 @@
         "sub_group_size": 1e9,
         "stage3_max_live_parameters": 1e9,
         "stage3_max_reuse_distance": 1e9,
-        "stage3_gather_16bit_weights_on_model_save": true,
+        "stage3_gather_16bit_weights_on_model_save": true
     },
     "gradient_accumulation_steps": 4,
     "gradient_clipping": "auto",
